# r2-proxy

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
docs/superpowers/plans/: 2026-03-29-local-disk-cache.md  2026-03-30-stats-error-breakdown.md  2026-03-30-status-page-dashboard.md
docs/superpowers/specs/: 2026-03-30-stats-error-breakdown-design.md  2026-03-30-status-page-design.md
src/: config.rs  cors.rs  errors.rs  kv_client.rs  local_cache.rs  main.rs  s3_client.rs  stats.rs  status_assets.rs  status_server.rs
status/: app.css  app.js  index.html
tests/: docker-publish-workflow-cache.test.mjs  status-chart-card-spacing.test.mjs
