[package]
name = "r2-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP 服务器
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.15"

# S3 SDK
aws-config = "1.0"
aws-sdk-s3 = "1.0"
aws-smithy-types = "1.0"
aws-smithy-runtime-api = "1.0"

# HTTP 客户端
reqwest = { version = "0.11", features = ["stream"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 工具库
url = "2.4"
regex = "1.0"
futures-util = "0.3"

# 环境变量
dotenv = "0.15"
